# unifoxbot

./: .env  bot.sett  googleSearch.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: admin.py  botSettings.py  cog_example.py  events.py  furry.py  furryCommands.py  general.py  generalCommands.py  music.py  musicCommands.py  search.py
