[tool.poetry]
name = "Unifox Discord Bot Testing"
version = "0.1.0"
description = ""
authors = ["Unifox <awsomejojop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
Flask = "^2.0.2"
youtube_dl = "^2021.12.17"
python-dotenv = "^0.19.2"
PyNaCl = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
